src/components/BackGroundImgStyles.css
.mask{
    width:100%;
    height: 100vh;
    position:relative;
}
.portfolio-p1{
    width: 100%;
    height: 100%;
    background-size: cover;
    background-position: center;
    object-fit:cover;
}
/* create black overlay for background image */
.mask::after{
    content:"";
    width:100%;
    height: 100%;
    position:absolute;
    top:0;
    left:0;
    background-color: #000;
    opacity: 0.8;
}
.background{
    height: 100%;
    width:100%;
}
.background .content{
    position: absolute;
    transform: translate(-50%,-50%);
    top:50%;
    left: 50%;
    text-align: center;

}
/* changes size and padding of content text */
.background .content h1{
    font-size: 3rem;
    padding: 0.6rem 0 1.5rem;
    
}
/* resume page bio styling size */
.background .content h3{
    font-size: 2rem;
    padding: 0.6rem 0 1.5rem;
    
}
.background .content h4{
    font-size: 2rem;
    padding: 0.6rem 0 1.5rem;
    
}
.background .content p{
    font-size: 1.4rem;
    font-weight: 200;
    text-transform: uppercase;
}
.content .btn{
    margin: 1rem 0.4rem;
}
@media screen and (max-width:640px){
    .background .content h1{
        font-size: 3rem;
        
        
    }
    /* for /resume page */
    .background .content h4{ 
        font-size: 1rem;
        
        
    }
    .background .content p{
        font-size: 1.4rem;
        
       

}
}

